# Gutenberg-Script

guten-clean/: README.md  pyproject.toml  requirements.txt
guten-clean/src/guten_clean/: cleaner.py  epub_cleaner.py  main.py
guten-clean/src/guten_clean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
guten-clean/tests/: test_guten_clean.py
guten-clean/tests/test_data/: the_yellow_wallpaper.html  the_yellow_wallpaper.txt
